--- a/flex/03-flex-header-2/answer/style.css
+++ b/flex/03-flex-header-2/answer/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -22,7 +26,15 @@ body {
   height: 48px;
 }
 
+.left, .right{
+  display: flex;
+  /* margin-right: auto; */
+  gap: 16px;
+  align-items: center;
+}
+
 .logo {
+  margin: 0px;
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
@@ -44,5 +56,9 @@ a {
 }
 
 ul {
+  margin: 0px;
+  padding: 0px;
   list-style-type: none;
+  display: flex;
+  gap: 16px;
 }
