--- a/flex/04-flex-information/answer/style.css
+++ b/flex/04-flex-information/answer/style.css
@@ -1,5 +1,16 @@
 body {
+  text-align: center;
   font-family: 'Courier New', Courier, monospace;
+}
+
+.picture{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.box{
+  max-width: 200px;
 }
 
 img {
@@ -10,6 +21,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
