--- a/flex/05-flex-modal/answer/style.css
+++ b/flex/05-flex-modal/answer/style.css
@@ -20,9 +20,28 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 10px;
+}
+
+.right{
+  margin: 10px;
+}
+
+.header{
+  font-weight: bolder;
+  font-size: 20px;
+}
+
+.top{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .icon {
+  flex: 0 0 auto;
   color: royalblue;
   font-size: 26px;
   font-weight: 700;
@@ -33,6 +52,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 5px;
+}
+
+.text{
+  margin-bottom: 10px;
 }
 
 .close-button {
